--- a/services.html
+++ b/services.html
@@ -139,6 +139,7 @@
 </div>
 
     <div id="whole" class="container">
+
     <!-- Product 1 -->
         <div class="product">
             <img src="images1/id.jpg" alt="Product 1">
@@ -168,6 +169,221 @@
             <input type="number" id="qty-product-3" min="1" max="5" value="1">
             <button id="btn-product-3" onclick="addToCart('Document Lamination (Long)', 35, 3)">Add to Cart</button>
             <button id="cancel-product-3" onclick="cancelFromCart(3)" disabled>Cancel</button>
+        </div>
+
+
+
+<!-- Product 52 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/lunox.jpg">
+            <h3>Sticker 5</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-52">10</span></p>
+            <input type="number" id="qty-product-52" min="1" max="10" value="1">
+            <button id="btn-product-52" onclick="addToCart('Sticker 5', 4, 52)">Add to Cart</button>
+            <button id="cancel-product-52" onclick="cancelFromCart(52)" disabled>Cancel</button>
+        </div> 
+
+<!-- Product 53 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/luoyi.jpg">
+            <h3>Sticker 6</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-53">10</span></p>
+            <input type="number" id="qty-product-53" min="1" max="10" value="1">
+            <button id="btn-product-53" onclick="addToCart('Sticker 6', 4, 53)">Add to Cart</button>
+            <button id="cancel-product-53" onclick="cancelFromCart(53)" disabled>Cancel</button>
+        </div> 
+
+<!-- Product 54 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/gusion2.jpg">
+            <h3>Sticker 7</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-54">10</span></p>
+            <input type="number" id="qty-product-54" min="1" max="10" value="1">
+            <button id="btn-product-54" onclick="addToCart('Sticker 7', 4, 54)">Add to Cart</button>
+            <button id="cancel-product-54" onclick="cancelFromCart(54)" disabled>Cancel</button>
+        </div> 
+<!-- Product 55 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/granger2.jpg">
+            <h3>Sticker 8</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-55">10</span></p>
+            <input type="number" id="qty-product-55" min="1" max="10" value="1">
+            <button id="btn-product-55" onclick="addToCart('Sticker 8', 4, 55)">Add to Cart</button>
+            <button id="cancel-product-55" onclick="cancelFromCart(55)" disabled>Cancel</button>
+        </div> 
+<!-- Product 56 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/granger.jpg">
+            <h3>Sticker 9</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-56">10</span></p>
+            <input type="number" id="qty-product-56" min="1" max="10" value="1">
+            <button id="btn-product-56" onclick="addToCart('Sticker 9', 4, 56)">Add to Cart</button>
+            <button id="cancel-product-56" onclick="cancelFromCart(56)" disabled>Cancel</button>
+        </div> 
+<!-- Product 57 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/chou.jpg">
+            <h3>Sticker 10</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-57">10</span></p>
+            <input type="number" id="qty-product-57" min="1" max="10" value="1">
+            <button id="btn-product-57" onclick="addToCart('Sticker 10', 4, 57)">Add to Cart</button>
+            <button id="cancel-product-57" onclick="cancelFromCart(57)" disabled>Cancel</button>
+        </div> 
+<!-- Product 58 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/vale.jpg">
+            <h3>Sticker 11</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-58">10</span></p>
+            <input type="number" id="qty-product-58" min="1" max="10" value="1">
+            <button id="btn-product-58" onclick="addToCart('Sticker 11', 4, 58)">Add to Cart</button>
+            <button id="cancel-product-58" onclick="cancelFromCart(58)" disabled>Cancel</button>
+        </div> 
+<!-- Product 59 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/ling.jpg">
+            <h3>Sticker 12</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-59">10</span></p>
+            <input type="number" id="qty-product-59" min="1" max="10" value="1">
+            <button id="btn-product-59" onclick="addToCart('Sticker 12', 4, 59)">Add to Cart</button>
+            <button id="cancel-product-59" onclick="cancelFromCart(59)" disabled>Cancel</button>
+        </div> 
+<!-- Product 60 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/hayabusa2.jpg">
+            <h3>Sticker 13</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-60">10</span></p>
+            <input type="number" id="qty-product-60" min="1" max="10" value="1">
+            <button id="btn-product-60" onclick="addToCart('Sticker 13', 4, 60)">Add to Cart</button>
+            <button id="cancel-product-60" onclick="cancelFromCart(60)" disabled>Cancel</button>
+        </div> 
+
+<!-- Product 61 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/hayabusa.jpg">
+            <h3>Sticker 14</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-61">10</span></p>
+            <input type="number" id="qty-product-61" min="1" max="10" value="1">
+            <button id="btn-product-61" onclick="addToCart('Sticker 14', 4, 61)">Add to Cart</button>
+            <button id="cancel-product-61" onclick="cancelFromCart(61)" disabled>Cancel</button>
+        </div>
+<!-- Product 62 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/miya3.jpg">
+            <h3>Sticker 15</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-62">10</span></p>
+            <input type="number" id="qty-product-62" min="1" max="10" value="1">
+            <button id="btn-product-62" onclick="addToCart('Sticker 15', 4, 62)">Add to Cart</button>
+            <button id="cancel-product-62" onclick="cancelFromCart(62)" disabled>Cancel</button>
+        </div>
+<!-- Product 63 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/mllogo.jpg">
+            <h3>Sticker 16</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-63">10</span></p>
+            <input type="number" id="qty-product-63" min="1" max="10" value="1">
+            <button id="btn-product-63" onclick="addToCart('Sticker 16', 4, 63)">Add to Cart</button>
+            <button id="cancel-product-63" onclick="cancelFromCart(63)" disabled>Cancel</button>
+        </div>
+<!-- Product 64 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/tigreal2.jpg">
+            <h3>Sticker 17</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-64">10</span></p>
+            <input type="number" id="qty-product-64" min="1" max="10" value="1">
+            <button id="btn-product-64" onclick="addToCart('Sticker 17', 4, 64)">Add to Cart</button>
+            <button id="cancel-product-64" onclick="cancelFromCart(64)" disabled>Cancel</button>
+        </div>
+<!-- Product 65 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/nana2.jpg">
+            <h3>Sticker 18</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-65">10</span></p>
+            <input type="number" id="qty-product-65" min="1" max="10" value="1">
+            <button id="btn-product-65" onclick="addToCart('Sticker 18', 4, 65)">Add to Cart</button>
+            <button id="cancel-product-65" onclick="cancelFromCart(65)" disabled>Cancel</button>
+        </div>
+<!-- Product 66 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/tigreal.jpg">
+            <h3>Sticker 19</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-66">10</span></p>
+            <input type="number" id="qty-product-66" min="1" max="10" value="1">
+            <button id="btn-product-66" onclick="addToCart('Sticker 19', 4, 66)">Add to Cart</button>
+            <button id="cancel-product-66" onclick="cancelFromCart(66)" disabled>Cancel</button>
+        </div>
+<!-- Product 67 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/aurora2.jpg">
+            <h3>Sticker 20</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-67">10</span></p>
+            <input type="number" id="qty-product-67" min="1" max="10" value="1">
+            <button id="btn-product-67" onclick="addToCart('Sticker 20', 4, 67)">Add to Cart</button>
+            <button id="cancel-product-67" onclick="cancelFromCart(67)" disabled>Cancel</button>
+        </div>
+<!-- Product 68 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/dyrroth.jpg">
+            <h3>Sticker 21</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-68">10</span></p>
+            <input type="number" id="qty-product-68" min="1" max="10" value="1">
+            <button id="btn-product-68" onclick="addToCart('Sticker 21', 4, 68)">Add to Cart</button>
+            <button id="cancel-product-68" onclick="cancelFromCart(68)" disabled>Cancel</button>
+        </div>
+<!-- Product 69 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/miya2.jpg">
+            <h3>Sticker 22</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-69">10</span></p>
+            <input type="number" id="qty-product-69" min="1" max="10" value="1">
+            <button id="btn-product-69" onclick="addToCart('Sticker 22', 4, 69)">Add to Cart</button>
+            <button id="cancel-product-69" onclick="cancelFromCart(69)" disabled>Cancel</button>
+        </div>
+<!-- Product 70 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/zhuxin.jpg">
+            <h3>Sticker 23</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-70">10</span></p>
+            <input type="number" id="qty-product-70" min="1" max="10" value="1">
+            <button id="btn-product-70" onclick="addToCart('Sticker 23', 4, 70)">Add to Cart</button>
+            <button id="cancel-product-70" onclick="cancelFromCart(70)" disabled>Cancel</button>
         </div>
 
 
@@ -259,6 +475,10 @@
 
 
 
+
+
+
+
     </div>
 
 <center>
@@ -300,7 +520,9 @@
     <script>
         let cart = [];
         let totalPrice = 0;
-        let stocks = { 1: 5, 2: 5, 3: 5,4:5, 5:5, 6:5, 7:5, 8:5, 9:5, 10:5,11:5,}; // Initial stock levels
+        let stocks = { 1: 5, 2: 5, 3: 5,4:5, 5:5, 6:5, 7:5, 8:5, 9:5, 10:5,11:5,33:5,
+			52:10, 53:10, 54:10, 55:10, 56:10, 57:10, 58:10, 59:10, 60:10,
+			61:10, 62:10,63:10, 64:10,65:10, 66:10,67:10, 68:10,69:10, 70:10,}; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
