--- a/new.html
+++ b/new.html
@@ -129,6 +129,35 @@
 
     <div id="whole" class="container">
 
+<!-- Product 71 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/sheet.jpg">
+            <h3>LNHS Answer</h3>
+            <h3>Sheet 1</h3>
+		<p style="color:black;font-size:80%;">Front Page Template </p>
+		<p style="color:black;font-size:80%;">(8 Pieces-Long)</p>
+            <p>₱5.00</p>
+            <p>Stock: <span id="stock-product-71">50</span></p>
+            <input type="number" id="qty-product-71" min="1" max="50" value="1">
+            <button id="btn-product-71" onclick="addToCart('LNHS Answer Sheet 1', 5, 71)">Add to Cart</button>
+            <button id="cancel-product-71" onclick="cancelFromCart(71)" disabled>Cancel</button>
+        </div>
+<!-- Product 72 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images/sheet.jpg">
+            <h3>LNHS Answer</h3>
+            <h3>Sheet 2</h3>
+		<p style="color:black;font-size:80%;">Back to Back Template </p>
+		<p style="color:black;font-size:80%;">(8 Pieces-Long)</p>
+            <p>₱7.00</p>
+            <p>Stock: <span id="stock-product-72">50</span></p>
+            <input type="number" id="qty-product-72" min="1" max="50" value="1">
+            <button id="btn-product-72" onclick="addToCart('LNHS Answer Sheet 2', 7, 72)">Add to Cart</button>
+            <button id="cancel-product-72" onclick="cancelFromCart(72)" disabled>Cancel</button>
+        </div>
+
+
+
 <!-- Product 27 -->
         <div class="product" style="line-height:0.5;">
             <img src="images4/per1.jpg" alt="Product 1">
@@ -882,7 +911,8 @@
 			 11:5, 12:5, 13:5, 14:5, 15:5, 16:5, 17:50, 18:50, 19:25, 20:0,
 			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0,27:10, 28:10, 29:10, 30:10, 31:10,32:10, 33:10,
 			44:5, 45:5, 46:5, 47:5, 48:5, 49:5, 50:5, 51:5,52:5, 52:10, 53:10, 54:10, 55:10, 56:10, 57:10, 58:10, 59:10, 60:10,
-			61:10, 62:10,63:10, 64:10,65:10, 66:10,67:10, 68:10,69:10, 70:10, }; // Initial stock levels
+			61:10, 62:10,63:10, 64:10,65:10, 66:10,67:10, 68:10,69:10, 70:10,
+			71:50, 72:50, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
