--- a/healthbeauty.html
+++ b/healthbeauty.html
@@ -275,9 +275,9 @@
  <!-- Product 11 -->
         <div class="product" style="line-height:0.5;">
             <img src="images4/NORELI.jpg">
-            <h3>Floating Noreli</h3>
+            <h3>Floating</h3>
+            <h3>Noreli</h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
-            <p><del>₱35.00</del></p>
             <p>₱19.00</p>
             <p>Stock: <span id="stock-product-11">10</span></p>
             <input type="number" id="qty-product-11" min="1" max="10" value="1">
@@ -289,7 +289,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/AMBER.jpg">
             <h3>Dark Amber</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>₱19.00</p>
             <p>Stock: <span id="stock-product-9">10</span></p>
@@ -302,7 +302,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/ATLANTIC.jpg">
             <h3>Atlantic</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>₱5.00</p>
             <p>Stock: <span id="stock-product-12">10</span></p>
@@ -343,7 +343,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/per3.jpg" alt="Product 3">
             <h3>Coast</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>Now ₱19.00</p>
             <p>Stock: <span id="stock-product-3">10</span></p>
@@ -356,7 +356,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/per4.jpg">
             <h3>Suede</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>Now ₱19.00</p>
             <p>Stock: <span id="stock-product-4">10</span></p>
