--- a/new.html
+++ b/new.html
@@ -146,9 +146,9 @@
  <!-- Product 74 -->
         <div class="product" style="line-height:0.5;">
             <img src="images4/NORELI.jpg">
-            <h3>Floating Noreli</h3>
+            <h3>Floating</h3>
+            <h3>Noreli</h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
-            <p><del>₱35.00</del></p>
             <p>₱19.00</p>
             <p>Stock: <span id="stock-product-74">10</span></p>
             <input type="number" id="qty-product-74" min="1" max="10" value="1">
@@ -160,7 +160,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/AMBER.jpg">
             <h3>Dark Amber</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>₱19.00</p>
             <p>Stock: <span id="stock-product-75">10</span></p>
@@ -173,7 +173,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/ATLANTIC.jpg">
             <h3>Atlantic</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>₱5.00</p>
             <p>Stock: <span id="stock-product-76">10</span></p>
@@ -242,7 +242,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/per3.jpg" alt="Product 3">
             <h3>Coast</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>Now ₱19.00</p>
             <p>Stock: <span id="stock-product-29">10</span></p>
@@ -255,7 +255,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/per4.jpg">
             <h3>Suede</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>Now ₱19.00</p>
             <p>Stock: <span id="stock-product-30">10</span></p>
@@ -269,7 +269,7 @@
         <div class="product" style="line-height:0.5;">
             <img src="images4/per5.jpg">
             <h3>HC & Cream</h3>
-		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
             <p><del>₱35.00</del></p>
             <p>₱19.00</p>
             <p>Stock: <span id="stock-product-31">10</span></p>
