--- a/new.html
+++ b/new.html
@@ -900,7 +900,219 @@
             <button id="cancel-product-70" onclick="cancelFromCart(70)" disabled>Cancel</button>
         </div>
 
+<!-- Product 77 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s24.jpg">
+            <h3>Sticker 24</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-77">10</span></p>
+            <input type="number" id="qty-product-77" min="1" max="10" value="1">
+            <button id="btn-product-77" onclick="addToCart('Sticker 24', 4, 77)">Add to Cart</button>
+            <button id="cancel-product-77" onclick="cancelFromCart(77)" disabled>Cancel</button>
+        </div>
 
+<!-- Product 78 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s25.jpg">
+            <h3>Sticker 25</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-78">10</span></p>
+            <input type="number" id="qty-product-78" min="1" max="10" value="1">
+            <button id="btn-product-78" onclick="addToCart('Sticker 25', 4, 78)">Add to Cart</button>
+            <button id="cancel-product-78" onclick="cancelFromCart(78)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 79 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s26.jpg">
+            <h3>Sticker 26</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-79">10</span></p>
+            <input type="number" id="qty-product-79" min="1" max="10" value="1">
+            <button id="btn-product-79" onclick="addToCart('Sticker 26', 4, 79)">Add to Cart</button>
+            <button id="cancel-product-79" onclick="cancelFromCart(79)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 80 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s27.jpg">
+            <h3>Sticker 27</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-80">10</span></p>
+            <input type="number" id="qty-product-80" min="1" max="10" value="1">
+            <button id="btn-product-80" onclick="addToCart('Sticker 27', 4, 80)">Add to Cart</button>
+            <button id="cancel-product-80" onclick="cancelFromCart(80)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 81 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s28.jpg">
+            <h3>Sticker 28</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-81">10</span></p>
+            <input type="number" id="qty-product-81" min="1" max="10" value="1">
+            <button id="btn-product-81" onclick="addToCart('Sticker 28', 4, 81)">Add to Cart</button>
+            <button id="cancel-product-81" onclick="cancelFromCart(81)" disabled>Cancel</button>
+        </div>
+<!-- Product 82 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s29.jpg">
+            <h3>Sticker 29</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-82">10</span></p>
+            <input type="number" id="qty-product-82" min="1" max="10" value="1">
+            <button id="btn-product-82" onclick="addToCart('Sticker 29', 4, 82)">Add to Cart</button>
+            <button id="cancel-product-82" onclick="cancelFromCart(82)" disabled>Cancel</button>
+        </div>
+<!-- Product 83 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s30.jpg">
+            <h3>Sticker 30</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-83">10</span></p>
+            <input type="number" id="qty-product-83" min="1" max="10" value="1">
+            <button id="btn-product-83" onclick="addToCart('Sticker 30', 4, 83)">Add to Cart</button>
+            <button id="cancel-product-83" onclick="cancelFromCart(83)" disabled>Cancel</button>
+        </div>
+<!-- Product 84 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s31.jpg">
+            <h3>Sticker 31</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-84">10</span></p>
+            <input type="number" id="qty-product-84" min="1" max="10" value="1">
+            <button id="btn-product-84" onclick="addToCart('Sticker 31', 4, 84)">Add to Cart</button>
+            <button id="cancel-product-84" onclick="cancelFromCart(84)" disabled>Cancel</button>
+        </div>
+<!-- Product 85 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s32.jpg">
+            <h3>Sticker 32</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-85">10</span></p>
+            <input type="number" id="qty-product-85" min="1" max="10" value="1">
+            <button id="btn-product-85" onclick="addToCart('Sticker 32', 4, 85)">Add to Cart</button>
+            <button id="cancel-product-85" onclick="cancelFromCart(85)" disabled>Cancel</button>
+        </div>
+<!-- Product 86 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s33.jpg">
+            <h3>Sticker 33</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-86">10</span></p>
+            <input type="number" id="qty-product-86" min="1" max="10" value="1">
+            <button id="btn-product-86" onclick="addToCart('Sticker 33', 4, 86)">Add to Cart</button>
+            <button id="cancel-product-86" onclick="cancelFromCart(86)" disabled>Cancel</button>
+        </div>
+<!-- Product 87 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s34.jpg">
+            <h3>Sticker 34</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-87">10</span></p>
+            <input type="number" id="qty-product-87" min="1" max="10" value="1">
+            <button id="btn-product-87" onclick="addToCart('Sticker 34', 4, 87)">Add to Cart</button>
+            <button id="cancel-product-87" onclick="cancelFromCart(87)" disabled>Cancel</button>
+        </div>
+<!-- Product 88 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s35.jpg">
+            <h3>Sticker 35</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-88">10</span></p>
+            <input type="number" id="qty-product-88" min="1" max="10" value="1">
+            <button id="btn-product-88" onclick="addToCart('Sticker 35', 4, 88)">Add to Cart</button>
+            <button id="cancel-product-88" onclick="cancelFromCart(88)" disabled>Cancel</button>
+        </div>
+<!-- Product 89 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s36.jpg">
+            <h3>Sticker 36</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-89">10</span></p>
+            <input type="number" id="qty-product-89" min="1" max="10" value="1">
+            <button id="btn-product-89" onclick="addToCart('Sticker 36', 4, 89)">Add to Cart</button>
+            <button id="cancel-product-89" onclick="cancelFromCart(89)" disabled>Cancel</button>
+        </div>
+<!-- Product 90 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s37.jpg">
+            <h3>Sticker 37</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-90">10</span></p>
+            <input type="number" id="qty-product-90" min="1" max="10" value="1">
+            <button id="btn-product-90" onclick="addToCart('Sticker 37', 4, 90)">Add to Cart</button>
+            <button id="cancel-product-90" onclick="cancelFromCart(90)" disabled>Cancel</button>
+        </div>
+<!-- Product 91 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s38.jpg">
+            <h3>Sticker 38</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-91">10</span></p>
+            <input type="number" id="qty-product-91" min="1" max="10" value="1">
+            <button id="btn-product-91" onclick="addToCart('Sticker 38', 4, 91)">Add to Cart</button>
+            <button id="cancel-product-91" onclick="cancelFromCart(91)" disabled>Cancel</button>
+        </div>
+<!-- Product 92 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s39.jpg">
+            <h3>Sticker 39</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-92">10</span></p>
+            <input type="number" id="qty-product-92" min="1" max="10" value="1">
+            <button id="btn-product-92" onclick="addToCart('Sticker 39', 4, 92)">Add to Cart</button>
+            <button id="cancel-product-92" onclick="cancelFromCart(92)" disabled>Cancel</button>
+        </div>
+<!-- Product 93 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s40.jpg">
+            <h3>Sticker 40</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-93">10</span></p>
+            <input type="number" id="qty-product-93" min="1" max="10" value="1">
+            <button id="btn-product-93" onclick="addToCart('Sticker 40', 4, 93)">Add to Cart</button>
+            <button id="cancel-product-93" onclick="cancelFromCart(93)" disabled>Cancel</button>
+        </div>
+<!-- Product 94 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s41.jpg">
+            <h3>Sticker 41</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-94">10</span></p>
+            <input type="number" id="qty-product-94" min="1" max="10" value="1">
+            <button id="btn-product-94" onclick="addToCart('Sticker 41', 4, 94)">Add to Cart</button>
+            <button id="cancel-product-94" onclick="cancelFromCart(94)" disabled>Cancel</button>
+        </div>
+<!-- Product 95 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/s42.jpg">
+            <h3>Sticker 42</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-95">10</span></p>
+            <input type="number" id="qty-product-95" min="1" max="10" value="1">
+            <button id="btn-product-95" onclick="addToCart('Sticker 42', 4, 95)">Add to Cart</button>
+            <button id="cancel-product-95" onclick="cancelFromCart(95)" disabled>Cancel</button>
+        </div>
 
 
 
@@ -967,7 +1179,9 @@
 			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0,27:10, 28:10, 29:10, 30:10, 31:10,32:10, 33:10,
 			44:5, 45:5, 46:5, 47:5, 48:5, 49:5, 50:5, 51:5,52:5, 52:10, 53:10, 54:10, 55:10, 56:10, 57:10, 58:10, 59:10, 60:10,
 			61:10, 62:10,63:10, 64:10,65:10, 66:10,67:10, 68:10,69:10, 70:10,
-			71:50, 72:50, 73:10, 74:10, 75:10, 76:10, }; // Initial stock levels
+			71:50, 72:50, 73:10, 74:10, 75:10, 76:10,77:10, 78:10, 79:10, 80:10, 
+			81:10, 82:10,83:10, 84:10,85:10, 86:10,87:10, 88:10,89:10, 90:10,
+			91:10, 92:10, 93:10, 94:10, 95:10,}; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
