--- a/new.html
+++ b/new.html
@@ -113,6 +113,7 @@
 <h1>Ten costumers  per day will receive 1 FREE product.</h1>
 <h1>Starting from December 16-20, 2024</h1>
 </div>
+	<a href="home2.html" target="_parent"><button>GET 1 FREE PRODUCT</button></a>
 </center>
 
 <div id="instruction" style="padding:50px;left:100px;width:100%;">
