--- a/new.html
+++ b/new.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
     <style>
+	    button {
+	width:30%;
+	margin-top:50px;
+	padding:20px 0;
+	background:orange;/*#6fd649;*/
+	color:#fff;
+	border:0;
+	outline:none;
+	font-size:18px;
+	cursor:pointer;
+	border-radius:20px;
+	box-shadow:0 5px 5px rgba(0,0,0,0.2);
+}
         body {
             font-family: Arial, sans-serif;
             margin: 0;
