--- a/healthbeauty.html
+++ b/healthbeauty.html
@@ -109,9 +109,7 @@
     </header>
 <center>
 <div id="update" style="width:100%;color:red;">
-<h1>(NEW ANNOUNCEMENT)</h1>
-<h1>Ten costumers  per day will receive 1 FREE product.</h1>
-<h1>Starting from December 2-5, 2024</h1>
+<h1>ADVANCE MERRY CHRISTMAS AND HAPPY NEW YEAR!!!</h1>
 </div>
 </center>
 
