--- a/new.html
+++ b/new.html
@@ -5,19 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
     <style>
-	    button {
-	width:30%;
-	margin-top:50px;
-	padding:20px 0;
-	background:orange;/*#6fd649;*/
-	color:#fff;
-	border:0;
-	outline:none;
-	font-size:18px;
-	cursor:pointer;
-	border-radius:20px;
-	box-shadow:0 5px 5px rgba(0,0,0,0.2);
-}
+	   
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -126,7 +114,17 @@
 <h1>Ten costumers  per day will receive 1 FREE product.</h1>
 <h1>Starting from December 16-20, 2024</h1>
 </div>
-	<a href="home2.html" target="_parent"><button>GET 1 FREE PRODUCT</button></a>
+	<a href="home2.html" target="_parent"><button style="width:30%;
+	margin-top:50px;
+	padding:20px 0;
+	background:orange;/*#6fd649;*/
+	color:#fff;
+	border:0;
+	outline:none;
+	font-size:18px;
+	cursor:pointer;
+	border-radius:20px;
+	box-shadow:0 5px 5px rgba(0,0,0,0.2);">GET 1 FREE PRODUCT</button></a>
 </center>
 
 <div id="instruction" style="padding:50px;left:100px;width:100%;">
