--- a/new.html
+++ b/new.html
@@ -117,7 +117,7 @@
 	<a href="home2.html" target="_parent"><button style="width:30%;
 	margin-top:50px;
 	padding:20px 0;
-	background:orange;/*#6fd649;*/
+	background:red;/*#6fd649;*/
 	color:#fff;
 	border:0;
 	outline:none;
